@@ -1,5 +1,11 @@
 2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-extensions-manager.c:
+
+	s/DOT_INIT/DOT_INI/g.
+
+2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/epphy-extensions-manager.c: (free_extension_info),
 	(ephy_extensions_manager_load_xml_string), (path_to_identifier),
 	(ephy_extensions_manager_load_file), (load_file_from_monitor),
